[package]
name = "pyrage"
version = "1.1.3-rc.1"
authors = ["William Woodruff <william@yossarian.net>"]
edition = "2021"
description = "Python bindings for rage (age in Rust)"
homepage = "https://github.com/woodruffw/pyrage"
repository = "https://github.com/woodruffw/pyrage"
readme = "README.md"
license = "MIT"

[package.metadata.release]
publish = false # handled by GitHub Actions
push = true

[lib]
crate-type = ["cdylib"]

[dependencies]
age-core = "0.10"
age = { version = "0.10", features = ["ssh", "plugin"] }
pyo3 = { version = "0.21", features = [
    "extension-module",
    "abi3",
    "abi3-py38",
] }
