[package]
name = "pyrage"
version = "1.2.1"
authors = ["William Woodruff <william@yossarian.net>"]
edition = "2021"
description = "Python bindings for rage (age in Rust)"
homepage = "https://github.com/woodruffw/pyrage"
repository = "https://github.com/woodruffw/pyrage"
readme = "README.md"
license = "MIT"

[package.metadata.release]
publish = false # handled by GitHub Actions
push = true

[lib]
crate-type = ["cdylib"]

[dependencies]
age-core = "0.10"
age = { version = "0.10", features = ["ssh", "plugin"] }
pyo3 = { version = "0.22.4", features = [
    "extension-module",
    "abi3",
    "abi3-py38",
    "py-clone",
] }
pyo3-file = "0.9.0"
