[package]
name = "pyrage"
version = "1.3.0"
authors = ["William Woodruff <william@yossarian.net>"]
edition = "2021"
description = "Python bindings for rage (age in Rust)"
homepage = "https://github.com/woodruffw/pyrage"
repository = "https://github.com/woodruffw/pyrage"
readme = "README.md"
license = "MIT"

[package.metadata.release]
publish = false # handled by GitHub Actions
push = true

[lib]
crate-type = ["cdylib"]

[dependencies]
age-core = "0.11"
age = { version = "0.11.2", features = ["ssh", "plugin", "armor"] }
pyo3 = { version = "0.24.2", features = [
    "extension-module",
    "abi3",
    "abi3-py39",
    "py-clone",
] }
pyo3-file = "0.12.0"
