[build-system]
requires = ["setuptools>=61.0.0"]
build-backend = "setuptools.build_meta"

[project]
name = "pyrage-stubs"
version = "1.0.1"
description = "A PEP 561 stub package for pyrage's types"
readme = "README.md"
license = { file = "LICENSE" }
authors = [{ name = "William Woodruff", email = "william@yossarian.net" }]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Topic :: Security :: Cryptography",
  "Typing :: Stubs Only",
]
dependencies = [
  "pyrage>=1.0.0,<2.0"
]
requires-python = ">= 3.7"

[project.urls]
Homepage = "https://pypi.org/project/pyrage/"
Issues = "https://github.com/woodruffw/pyrage/issues"
Source = "https://github.com/woodruffw/pyrage/tree/main/pyrage-stubs"
