[build-system]
requires = ["setuptools>=61.0.0"]
build-backend = "setuptools.build_meta"

[project]
name = "pyrage-stubs"
version = "1.3.1"
description = "A PEP 561 stub package for pyrage's types"
readme = "README.md"
license = "MIT"
license-files = ["LICENSE"]
authors = [{ name = "William Woodruff", email = "william@yossarian.net" }]
classifiers = [
  "Intended Audience :: Developers",
  "Topic :: Security :: Cryptography",
  "Typing :: Stubs Only",
]
dependencies = ["pyrage>=1.3.0,<2.0"]
requires-python = ">= 3.8"

[project.urls]
Homepage = "https://pypi.org/project/pyrage/"
Issues = "https://github.com/woodruffw/pyrage/issues"
Source = "https://github.com/woodruffw/pyrage/tree/main/pyrage-stubs"

[tool.setuptools.package-data]
"*" = ["*.pyi"]
